--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                     </div>
                     <input type="text" class="form-control" placeholder="Search" aria-label="Username" aria-describedby="addon-wrapping" id="srchField">
                   </div>
+                  <div id="gifs-appear-here"></div>
                   <script src="https://code.jquery.com/jquery-3.4.0.min.js"
                   integrity="sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg="
                   crossorigin="anonymous"></script>
